# optimization

./: lp_1.py  lp_2.py  pyproject.toml
junior_high_school_time_table/: main.ipynb  model.md  teacher_timetable.md  timetable.md
ntt_data/: 1_composition.py  2_transport.py
train_diagram/: calc_n.py  letter.md  main.py  n.npy  n_prime.npy
tutorial/: lp_3.py
