[project]
name = "optimization"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "glpk>=0.4.8",
    "highspy>=1.14.0",
    "ipykernel>=7.2.0",
    "jinja2>=3.1.6",
    "numpy>=2.4.4",
    "pandas>=3.0.3",
    "pyomo>=6.10.0",
]
